ex-1.08-v0.5/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-web-server
  template:
    metadata:
      labels:
        app: simple-web-server
    spec:
      containers:
        - name: simple-web-server
          image: hovhanneshovakimyan/k8sproject:ex-1.08-v0.5
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
