ex-1.08-v0.5/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-web-server-svc
spec:
  type: ClusterIP
  selector:
    app: simple-web-server
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
